--- a/src/views/Admin/admin.css
+++ b/src/views/Admin/admin.css
@@ -1,13 +1,3 @@
-body {
-  margin: 0;
-}
-
-hr {
-  height: 1px;
-  width: 100%;
-  border: 0;
-  background: #0a2e650d;
-}
 
 .grid-container {
   display: grid;
@@ -41,7 +31,6 @@ hr {
   z-index: 101;
   position: fixed;
   padding: 0 16px;
-  /* padding: 20px 5px; */
   background-color: #fff;
 }
 
@@ -84,7 +73,6 @@ hr {
   z-index: 2;
   transform: translateX(-380px);
   transition: all 0.6s ease-in-out;
-
 }
 
 @media only screen and (min-width: 46.875em) {
@@ -97,7 +85,118 @@ hr {
 
 @media only screen and (max-width: 767px) {
   .main {
-    padding: 50px 10px 0;
     height: 100%;
   }
 }
+
+
+/* Home style */
+.overview {
+  display: flex;
+  flex-direction: row;
+  padding: 24px;
+  height: 100%;
+  background: #ffffff;
+  box-shadow: 0 0 6px #00000014;
+  border-radius: 30px;
+}
+
+
+
+.overview__action-button button {
+  font-size: 14px;
+  padding: 8px 16px;
+  font-weight: bold;
+  letter-spacing: 0;
+  color: #336799;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.overview__action-view {
+  margin-left: 32px;
+}
+
+.overview-summary h1 {
+  font-weight: bold;
+  font-size: 47px;
+  letter-spacing: 0;
+  color: #333333;
+}
+
+.overview-summary p {
+  font-size: 12px;
+  color: #777777;
+  letter-spacing: 0;
+}
+
+.min-overview--body {
+  /*margin: 32px 0 68px;*/
+}
+
+
+
+.min-overview {
+  background: #fff;
+  box-shadow: 0 0 6px #00000014;
+  border-radius: 15px;
+  padding: 24px;
+}
+.overview-call{
+  display: flex;
+  align-items: baseline;
+  margin-bottom: 15px;
+}
+.overview-number {
+  font-size: 40px;
+  color: #333333;
+  letter-spacing: -0.5px;
+  line-height: 48px;
+}
+.overview-number-sub {
+  font-weight: 300;
+  font-size: 28px;
+  color: #777777;
+}
+.overview-percent {
+  font-size: 16px;
+  line-height: 19px;
+  color: #2db744;
+  margin: 21.31px 0;
+}
+.min-overview li {
+  font-size: 14px;
+  line-height: 24px;
+  letter-spacing: 0;
+  color: #333333;
+}
+
+
+.myProgress {
+  height: fit-content;
+  border-radius: 50px;
+  box-shadow: none;
+  background: #eeeeee 0 0 no-repeat padding-box;
+  display: flex;
+  overflow: hidden;
+  font-size: 0.75rem;
+}
+
+.bar {
+  background: #ff6501 0% 0% no-repeat padding-box;
+  border-radius: 50px;
+  height: 8px;
+  text-align: right;
+  padding-right: 10px;
+  box-shadow: none;
+  font-size: 9px;
+  line-height: 13px;
+  transition: width 0.6s ease;
+  flex-direction: column;
+  justify-content: center;
+  white-space: nowrap;
+}
+
+/* End Home style */
