--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -67,7 +67,9 @@ hr {
 ul {
     list-style: none;
 }
-
+.screen-padding{
+    padding: 32px 32px 0;
+}
 
 
 
@@ -134,6 +136,14 @@ ul {
 }
 .plr-20{
     padding: 0 20px;
+}
+.ptb-50{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.plr-40{
+    padding-left: 40px;
+    padding-right: 40px;
 }
 .mtb-15{
     margin: 15px 0;
