--- a/src/views/Admin/admin.css
+++ b/src/views/Admin/admin.css
@@ -15,9 +15,7 @@
 
 .main {
   grid-area: main;
-  padding: 50px 40px 0;
   height: 100%;
-  background-color: #f9f9f9;
 }
 
 .main-header {
@@ -199,3 +197,31 @@
 }
 
 /* End Home style */
+
+
+/*Calls css*/
+.menu-bar{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.search{
+  height: 32px;
+  width: 196px;
+}
+.search-form{
+  position: relative;
+  display: inline-block;
+}
+.search-icon{
+  position: absolute;
+  z-index: 2;
+  top: 10px;
+  left: 10px;
+  stroke: var(--text-color);
+}
+.menu-bar-right{
+  display: flex;
+}
+
+/*End calls css*/
