--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -24,7 +24,6 @@ body{
 }
 input{
     outline: none;
-    cursor: pointer;
     border: 2px solid;
     width: 100%;
 }
@@ -61,6 +60,9 @@ hr {
     height: 0;
     border: 1px solid #dddddd;
 }
+sub{
+    font-size: 2rem;
+}
 .vertical-hr {
     height: auto;
     transform: rotate(0deg);
@@ -70,7 +72,7 @@ ul {
     list-style: none;
 }
 .screen-padding {
-    padding: 32px 32px 0;
+    padding: 32px;
 }
 
 
@@ -104,6 +106,9 @@ ul {
 }
 .bold{
     font-weight: bold;
+}
+.bn {
+    border: none;
 }
 .background-grey{
     background-color: var(--background-color);
@@ -169,6 +174,9 @@ ul {
 .plr-32 {
     padding: 0 32px;
 }
+.pb-8 {
+    padding-bottom: 8px;
+}
 .pb-32 {
     padding-bottom: 32px;
 }
@@ -178,6 +186,9 @@ ul {
 .pt-32 {
     padding-top: 32px;
 }
+.pt-40 {
+    padding-top: 40px;
+}
 .ml-35 {
     margin-left: 35px;
 }
@@ -186,6 +197,9 @@ ul {
 }
 .mb-8 {
     margin-bottom: 8px;
+}
+.mb-10 {
+    margin-bottom: 10px;
 }
 .mb-12{
     margin-bottom: 12px;
@@ -201,6 +215,12 @@ ul {
 }
 .mb-32{
     margin-bottom: 32px;
+}
+.mb-40 {
+    margin-bottom: 40px;
+}
+.mb-56 {
+    margin-bottom: 56px;
 }
 .mr-33 {
     margin-right: 33px;
@@ -229,13 +249,15 @@ ul {
 /* End of border radius */
 
 
-
 .row-direction {
     display: flex;
     flex-direction: row;
 }
 .align-center{
     align-items: center;
+}
+.text-center {
+    text-align: center;
 }
 .justify-center {
     justify-content: center;
@@ -270,6 +292,12 @@ ul {
 }
 .col-12{
     width: 100%;
+}
+.col-28 {
+    width: 32%;
+}
+.col-64 {
+    width: 66%;
 }
 
 
