--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -35,6 +35,8 @@ table{
 }
 button{
     outline: none;
+    border: 1px solid transparent;
+    cursor: pointer;
 }
 h1{
     font-size: 3rem;
@@ -72,7 +74,11 @@ ul {
 .screen-padding {
     padding: 32px 32px 0;
 }
-
+textarea{
+    resize: none;
+    outline: none;
+    overflow: auto;
+}
 
 
 
@@ -127,6 +133,9 @@ ul {
 .mr-5{
     margin-right: 5px;
 }
+.mr-16{
+    margin-right: 16px;
+}
 .ml-3{
     margin-left: 3px;
 }
@@ -159,6 +168,9 @@ ul {
 }
 .mr-25{
     margin-right: 25px;
+}
+.mt-40{
+    margin-top: 40px;
 }
 .p-12 {
     padding: 12px;
