--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -1,11 +1,10 @@
 .sidenav-body {
-  padding: 80px 32.5px 0;
+  padding: 104px 32.5px 0;
   overflow-y: scroll;
 }
 .sidenav-body::-webkit-scrollbar {
   display: none;
 }
-
 
 .sidenav-body hr {
   border: 1px solid #dddddd;
@@ -40,23 +39,12 @@
 }
 
 .account-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none;
-  width: 228px;
-  height: 40px;
-  background-color: #fff;
-  border: 1px solid #dddddd;
-  border-radius: 30px;
-  margin-top: 24px;
+  transition: 0.3s all ease-in-out;
 }
 
-.account-button p {
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 52px;
-  color: #333333;
+.account-button:hover {
+  background-color: var(--hover-color);
+  color: var(--text-white);
 }
 
 .sidenav-list {
@@ -91,10 +79,6 @@
 
 .logout {
   margin-bottom: 54px;
-  font-size: 14;
-  line-height: 52px;
-  font-family: "Regular SF Pro Display";
-  letter-spacing: 0;
-  color: #336799;
   text-align: center;
+  cursor: pointer;
 }
