previous calls screen

--- a/src/components/Table/table.css
+++ b/src/components/Table/table.css
@@ -10,3 +10,8 @@ tr:first-child td:last-child { border-bottom-right-radius: 8px; }
     padding: 20px;
     border-bottom: 1px solid #dddddd;
 }
+
+.table-body a {
+    text-decoration: none;
+    color: var(--text-blue);
+}
