--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -185,6 +185,12 @@ textarea{
 .mt-5{
     margin-top: 5px;
 }
+.ml-8 {
+    margin-left: 8px;
+}
+.mr-8{
+    margin-right: 8px;
+}
 .mr-10{
     margin-right: 10px;
 }
@@ -242,6 +248,9 @@ textarea{
 .pl-38 {
     padding-left: 38px;
 }
+.mb-4{
+    margin-bottom: 4px;
+}
 .mb-8 {
     margin-bottom: 8px;
 }
@@ -295,7 +304,9 @@ textarea{
 
 /* End of border radius */
 
-
+.flex{
+    display: flex;
+}
 .row-direction {
     display: flex;
     flex-direction: row;
