--- a/src/views/Admin/admin.css
+++ b/src/views/Admin/admin.css
@@ -1,3 +1,93 @@
+/* Signin Screen */
+
+.signin {
+  margin-top: 105px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.signin-form {
+  margin-top: 53.5px;
+  margin-left: 95px;
+}
+
+.signin-form h1 {
+  font-size: 4rem;
+  color: #2e384d;
+}
+
+.signin-form h3 {
+  margin-bottom: 76.5px;
+}
+
+.signin-icon img {
+  width: 891px;
+  height: 660.92px;
+  margin-right: -102px;
+}
+
+.field:nth-child(2) {
+  margin-top: 49.5px;
+  margin-bottom: 23px;
+}
+
+.login-input {
+  border: 0;
+  outline: 0;
+  border-bottom: 1px solid #dddddd;
+  -webkit-appearance: none;
+  border-radius: 0;
+  padding: 0;
+}
+
+.login-input:focus {
+  outline: 0;
+  border-bottom: 1px solid var(--hover-color);
+}
+
+.login-input:placeholder-shown + .login-label {
+  cursor: text;
+  max-width: 66.66%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transform-origin: left bottom;
+  transform: translate(0, 2.125rem) scale(1.5);
+}
+
+.login-label {
+  font-size: 1.6rem;
+  color: var(--main-color);
+}
+
+.login-label,
+.login-input {
+  transition: all 0.2s;
+  touch-action: manipulation;
+}
+
+.login-button {
+  background: var(--text-color);
+  color: var(--text-white);
+  padding: 14px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.login-button h5 {
+  margin-right: 117px;
+  margin-left: 168px;
+}
+
+.login-button img {
+  width: 20px;
+  height: 20px;
+  margin-right: 39px;
+}
+
+/* End Signin Screen */
+
 .grid {
   display: grid;
   grid-template-columns: 1fr;
@@ -288,7 +378,7 @@
 /* End Profile Category Overlay */
 
 /* Add View Profile Overlay */
-.view-profile-table{
+.view-profile-table {
   padding: 10px 20px;
   border-radius: 4px;
 }
@@ -434,18 +524,25 @@
 
 /* End voicenotes style */
 
-
 /* tables style */
 
-.table-head td{
+.table-head td {
   padding: 10px 20px;
 }
-tr:first-child td:first-child { border-top-left-radius: 8px; }
-tr:first-child td:last-child { border-top-right-radius: 8px; }
-tr:first-child td:first-child { border-bottom-left-radius: 8px; }
-tr:first-child td:last-child { border-bottom-right-radius: 8px; }
+tr:first-child td:first-child {
+  border-top-left-radius: 8px;
+}
+tr:first-child td:last-child {
+  border-top-right-radius: 8px;
+}
+tr:first-child td:first-child {
+  border-bottom-left-radius: 8px;
+}
+tr:first-child td:last-child {
+  border-bottom-right-radius: 8px;
+}
 
-.table-body td{
+.table-body td {
   padding: 20px;
   border-bottom: 1px solid #dddddd;
 }
