--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -43,8 +43,10 @@
 }
 
 .sidenav-list-item {
-  padding: 11px 20px;
+  position: relative;
+  padding: 9px 0px;
   width: 100%;
+  align-items: center;
   cursor: pointer;
   border-radius: 8px;
   display: flex;
@@ -56,20 +58,35 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 48px;
+  transition: all 0.3s ease-in-out;
 }
 
 .sidenav-list-item:hover {
   color: var(--hover-color);
 }
 
-.sidenav-list-link {
+.sidenav-list-link a {
   text-decoration: none;
 }
 
 .sidenav-list-icon {
   font-size: 18px;
   line-height: 18px;
-  margin-right: 36px;
+  margin-right: 31px;
+  margin-left: 19px;
+}
+
+.sidenav-list-item h5 {
+  margin-right: 50px;
+}
+
+.sidenav .sidenav-list li.active > a:not([data-toggle="collapse"]):before {
+  content: "";
+  position: absolute;
+  background: #eee;
+  border-radius: 28px;
+  padding: 24px 126px;
+  z-index: -1;
 }
 
 .logout {
