--- a/src/routes/Admin/admin.css
+++ b/src/routes/Admin/admin.css
@@ -565,7 +565,6 @@
 }
 
 .sidenav-list {
-  padding: 10px;
   list-style-type: none;
 }
 
@@ -769,6 +768,20 @@
   background: #fff;
 }
 
+.pass-btn {
+  color: #336799;
+  border: 1px solid #336799;
+  box-shadow: 0px 0px 6px #33679914;
+  transition: all 0.2s ease-in-out;
+  margin-top: 8px;
+  margin-left: 8px;
+}
+
+.pass-btn:hover {
+  background-color: var(--text-color);
+  color: var(--text-white);
+}
+
 .profile-label {
   color: #777;
 }
@@ -777,6 +790,7 @@
   box-shadow: 0px 0px 6px #33679914;
   background-color: var(--text-white);
   color: var(--text-color);
+  transition: all 0.2s ease-in-out;
 }
 
 .upload-button:hover {
@@ -930,7 +944,6 @@
 }
 
 .callID-history {
-  margin-top: 44px;
   display: flex;
   justify-content: space-between;
 }
@@ -980,3 +993,157 @@ tr:first-child td:last-child {
 }
 
 /* End tables style */
+
+/* Business hours */
+
+.time-slot {
+  display: flex;
+  justify-content: space-between;
+}
+
+.time-slot-1 {
+  display: flex;
+  justify-content: space-between;
+}
+
+.time-slot-head {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 13px;
+}
+
+.slot {
+  display: flex;
+  flex-direction: column;
+}
+
+.slot-label {
+  display: flex;
+  flex-direction: row;
+}
+
+.label-day {
+  margin-right: 112px;
+}
+
+.start-time {
+  margin-right: 64px;
+}
+
+.extra-time {
+  margin-left: 20px;
+}
+
+.business-day {
+  padding: 8.4px 16.65px 8.53px 8px;
+  background-color: #f9f9f9;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.3px;
+}
+
+.business-day .to {
+  margin-left: 7px;
+  margin-right: 7px;
+}
+
+.days {
+  color: #fff;
+  background: #336799;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  margin-right: 83px;
+}
+
+.time-info-i {
+  margin-bottom: 16px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #777;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.time-info {
+  width: 20%;
+  color: #777;
+}
+
+.time-select {
+  border: 1px solid #eeeeee;
+  border-radius: 4px;
+  padding: 8px 12.9px 8px 9px;
+  background: #fff;
+  height: 32px;
+}
+
+.holiday {
+  display: flex;
+  justify-content: space-between;
+}
+
+.holiday-form {
+  width: 40%;
+}
+
+.holiday-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.holiday-info {
+  width: 19%;
+  color: #777;
+}
+
+.holiday-info-i {
+  margin-bottom: 16px;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background-color: #777;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+}
+
+.holiday-form table {
+  margin-bottom: 57px;
+}
+
+.holiday-form th {
+  font-weight: bold;
+  font-size: 12px;
+  color: #777;
+  text-align: left;
+  padding: 8px;
+}
+
+.holiday-form td {
+  text-align: left;
+  padding: 8px;
+}
+
+.holiday-form tr {
+  padding: 21px 14px;
+}
+
+.holiday-form p {
+  color: #777;
+  font-size: 8px;
+}
+
+.holiday-form tr:nth-child(even) {
+  background: #f9f9f9;
+}
+
+/* End Business hours */
